# sized_any

./: .gitignore  CMakeLists.txt  README.md  sized_any.hpp
examples/: CMakeLists.txt
include/kmillet/sized_any/: config.hpp.in  sized_any.hpp
tests/kmillet/sized_any/: CMakeLists.txt  sized_any.benchmark.cpp  sized_any.test.cpp
